# logic-expression-learning

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
logic_expression_learning/: example_golf.py  feature_selection.py  load_LIBSVM.py  load_dataset.py  runner.py  utils.py
tests/: test_logic_expression_learning.py
